Fixed module dashboard tile to wrap the title

--- a/pdfsam-gui/src/main/resources/css/pdfsam.css
+++ b/pdfsam-gui/src/main/resources/css/pdfsam.css
@@ -136,6 +136,7 @@
     -fx-font-weight: bold;
 	-fx-graphic-text-gap: 8.0px;
     -fx-padding: 6.0 0.0 4.0 0.0;
+	-fx-wrap-text: true;
 }
 .dashboard-modules-tile-text{
 	-fx-font-size: 1.1em;
